--- a/src/code-resources.html
+++ b/src/code-resources.html
@@ -57,6 +57,7 @@
         </div>
         <div class="footerList">
             <h5 class="footerHeadings">The Quiz</h5>
+            <a href="index.html">Home</a>
             <a href="algorithm.html">The Algorithm</a>
         </div>
         <div class="footerList">
