--- a/src/art-credits.html
+++ b/src/art-credits.html
@@ -7,15 +7,16 @@
     <header>
         <h1>Art Credits</h1>
         <img class="background-img" src="media/pokemon-header.jpg"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     </header>
 
     <div class="credits">
         <div class="credits-container">
             <ul>
-                <li>Normal and Fire Type Outcome Photos : <a href="https://twitter.com/designer_ojisan">@Designer_Ojisan</a></li>
-                <li>Water and Electric Type Outcome Photos : <a href="https://www.pixiv.net/en/users/13270206">ぽんゆい</a></li>
-                <li>Grass and Rock Type Outcome Photos : <a href="https://www.deviantart.com/saintnaruto/gallery">saintnaruto</a></li>
-                <li>The Header, Ice Outcome, and Poision Outcome : <a href="https://www.deviantart.com/lvstarlitsky">LVStarlitSky</a></li>
+                <li>Normal & Fire Type Outcome Photos : <a href="https://twitter.com/designer_ojisan">@Designer_Ojisan</a></li>
+                <li>Water & Electric Type Outcome Photos : <a href="https://www.pixiv.net/en/users/13270206">ぽんゆい</a></li>
+                <li>Grass & Rock Type Outcome Photos : <a href="https://www.deviantart.com/saintnaruto/gallery">saintnaruto</a></li>
+                <li>The Header, Ice Outcome, & Poison Outcome : <a href="https://www.deviantart.com/lvstarlitsky">LVStarlitSky</a></li>
                 <li>Fighting Type Outcome Photo : <a href="https://www.deviantart.com/reshiramaster/gallery">Reshiramaster</a></li>
                 <li>Ground Type Outcome Photo : <a href="https://www.pokemon.com/us">The Pokemon Company</a></li>
                 <li>Flying Type Outcome Photo : <a href="https://www.deviantart.com/mark331/gallery">mark331</a></li>
@@ -42,7 +43,7 @@
     <script src="info.js"></script>
 </body>
 <footer>
-    <div>
+    <div class="madeBy">
         <h4 id="creator-tag">made by xGigglypuff.</h4>
         <div class="support-button">
             <a href="https://ko-fi.com/gigglypuff"><img src="media/support-the-dev.png"></a>
@@ -75,7 +76,7 @@
             <a href="https://www.pokemoncenter.com/">Get Merch</a>
         </div>
     </div>
-    <div>
+    <div class="jigglyContainer">
         <img id="jigglypuff" src="media/jigglypuff-smile.gif"/>
     </div>
 </footer>
