--- a/src/related-quizzes.html
+++ b/src/related-quizzes.html
@@ -2,6 +2,7 @@
 <head>
     <title>Related Quizzes</title>
     <link href="info-style.css" rel="stylesheet"></link>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body>
     <header>
@@ -35,7 +36,7 @@
     <script src="info.js"></script>
 </body>
 <footer>
-    <div>
+    <div class="madeBy">
         <h4 id="creator-tag">made by xGigglypuff.</h4>
         <div class="support-button">
             <a href="https://ko-fi.com/gigglypuff"><img src="media/support-the-dev.png"></a>
@@ -68,7 +69,7 @@
             <a href="https://www.pokemoncenter.com/">Get Merch</a>
         </div>
     </div>
-    <div>
+    <div class="jigglyContainer">
         <img id="jigglypuff" src="media/jigglypuff-smile.gif"/>
     </div>
 </footer>
