--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FJVEN7W17S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FJVEN7W17S');
+    </script>
     <title></title>
     <link href="style.css" rel="stylesheet"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
