--- a/src/algorithm.html
+++ b/src/algorithm.html
@@ -111,7 +111,7 @@
                 <div class="question">Question 5: What are you most afraid of?</div>
                 <p>Description: This question uses your fears to assess your weaknesses. Thus, the type that the answer corresponds to is a type that you are weak to, according to the <a href="https://pokemondb.net/type">Pokemon Type Chart</a>.</p>
             <ul>
-                <li>ghosts = Weak to Ghost Types: Flying, Ghost</li>
+                <li>ghosts = Weak to Ghost Types: Psychic, Ghost</li>
                 <li>the ocean = Weak to Water Types: Fire, Ground, Rock</li>
                 <li>the dark = Weak to Dark Types: Psychic, Ghost</li>
                 <li>the wilderness = Weak to Grass Types: Water, Ground, Rock</li>
@@ -135,24 +135,20 @@
                 <div class="question">Question 6: What's your favorite game franchise?</div>
                 <p>Description: For this question, each video game corresponds with types of Pokemon.</p>
             <ul>
-                <li>ghosts = Weak to Ghost Types: Flying, Ghost</li>
-                <li>the ocean = Weak to Water Types: Fire, Ground, Rock</li>
-                <li>the dark = Weak to Dark Types: Psychic, Ghost</li>
-                <li>the wilderness = Weak to Grass Types: Water, Ground, Rock</li>
-                <li>volcanic eruptions = Weak to Fire Types: Grass, Ice, Bug, Steel</li>
-                <li>heights = Weak to Flying Types: Grass, Fighting, Bug</li>
-                <li>earthquakes = Weak to Ground Types: Electric, Fire, Poison, Rock, Steel</li>
-                <li>pretty girls = Weak to Fairy Types: Fighting, Dragon, Dark</li>
-                <li>being poisoned = Weak to Poison Types: Grass, Fairy</li>
-                <li>indsutrialization = Weak to Steel Types: Ice, Rock, Fairy</li>
-                <li>lightning = Weak to Electric Types: Water, Flying</li>
-                <li>mythical creatures = Weak to Dragon Types: Dragon</li>
-                <li>the cold = Weak to Ice Types: Grass, Ground, Flying, Dragon</li>
-                <li>normies = Weak to Normal Types: None</li>
-                <li>rockslide = Weak to Rock Types: Fire, Ice, Flying, Bug</li>
-                <li>spiders = Weak to Bug Types: Grass, Psychic, Dark</li>
-                <li>the future = Weak to Psychic Types: Fighting, Poison</li>
-                <li>fighting = Weak to Fighting Types: Normal, Ice, Rock, Dark, Steel</li>
+                <li>Kirby = Fairy, Flying</li>
+                <li>The Legend of Zelda = Grass, Dragon, Fairy</li>
+                <li>Super Mario = Normal, Ground</li>
+                <li>Minecraft = Grass, Ground, Rock</li>
+                <li>Metroid = Steel, Electric</li>
+                <li>Donkey Kong = Fighting, Grass, Ground</li>
+                <li>Animal Crossing = Grass, Bug, Water</li>
+                <li>Street Fighter = Fighting</li>
+                <li>Spyro = Dragon</li>
+                <li>Resident Evil = Dark, Ghost</li>
+                <li>Diablo = Fire</li>
+                <li>Dark Souls = Dark, Fairy</li>
+                <li>Splatoon = Water, Fighting</li>
+                <li>The Sims = Normal</li>
             </ul>
         </div>
         <div class="algorithm-container">
